[gd_scene load_steps=55 format=3 uid="uid://bl8sf65vlv8oa"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_bxcsj"]
[ext_resource type="Texture2D" uid="uid://cajbwcjoy46i" path="res://assets/sprites/knight.png" id="1_x7wmx"]
[ext_resource type="PackedScene" uid="uid://0303vj5ayet" path="res://scenes/player_ghost.tscn" id="2_epedm"]
[ext_resource type="AudioStream" uid="uid://fqeage2wu7n4" path="res://assets/sounds/jump.wav" id="3_ls1pa"]
[ext_resource type="AudioStream" uid="uid://b8u22da6yn0pn" path="res://assets/sounds/tap.wav" id="4_l58x2"]
[ext_resource type="AudioStream" uid="uid://dqnwo8d1ljeel" path="res://assets/sounds/hurt.wav" id="4_wweeb"]
[ext_resource type="AudioStream" uid="uid://0hoicmtpmwew" path="res://assets/sounds/ground_pound.wav" id="7_r46ec"]
[ext_resource type="PackedScene" uid="uid://d3gll0k6rbcpb" path="res://scenes/health_component.tscn" id="8_3x26n"]
[ext_resource type="AudioStream" uid="uid://c8mu2cnqudd0u" path="res://assets/sounds/click.wav" id="8_l0t5c"]
[ext_resource type="Script" path="res://scripts/core/fsm.gd" id="9_t7dai"]
[ext_resource type="Script" path="res://scripts/player/states/idle_state.gd" id="10_bbbfr"]
[ext_resource type="Script" path="res://scripts/player/states/run_state.gd" id="11_omj3b"]
[ext_resource type="Script" path="res://scripts/player/states/jump_state.gd" id="12_ku28p"]
[ext_resource type="Script" path="res://scripts/player/states/dead_state.gd" id="13_1tcp4"]
[ext_resource type="Script" path="res://scripts/player/states/fall_state.gd" id="13_k1mpx"]
[ext_resource type="Script" path="res://scripts/player/states/action/dash_action_state.gd" id="14_7675s"]
[ext_resource type="Script" path="res://scripts/player/states/action/idle_action_state.gd" id="14_rotc5"]
[ext_resource type="Script" path="res://scripts/player/states/wallslide_state.gd" id="15_3uq2u"]
[ext_resource type="Script" path="res://scripts/player/states/groundpound_state.gd" id="16_j77d5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0qexi"]
atlas = ExtResource("1_x7wmx")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgk64"]
atlas = ExtResource("1_x7wmx")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2g54"]
atlas = ExtResource("1_x7wmx")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mhva"]
atlas = ExtResource("1_x7wmx")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_71us2"]
atlas = ExtResource("1_x7wmx")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_21snm"]
atlas = ExtResource("1_x7wmx")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr7qk"]
atlas = ExtResource("1_x7wmx")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnofp"]
atlas = ExtResource("1_x7wmx")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0u4cg"]
atlas = ExtResource("1_x7wmx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_juiv0"]
atlas = ExtResource("1_x7wmx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i66jf"]
atlas = ExtResource("1_x7wmx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkvg0"]
atlas = ExtResource("1_x7wmx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oehnw"]
atlas = ExtResource("1_x7wmx")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hk67"]
atlas = ExtResource("1_x7wmx")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d7dm"]
atlas = ExtResource("1_x7wmx")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fnpf"]
atlas = ExtResource("1_x7wmx")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_opmdp"]
atlas = ExtResource("1_x7wmx")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gygjm"]
atlas = ExtResource("1_x7wmx")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8ptr"]
atlas = ExtResource("1_x7wmx")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_43u7l"]
atlas = ExtResource("1_x7wmx")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hckj1"]
atlas = ExtResource("1_x7wmx")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ck5j"]
atlas = ExtResource("1_x7wmx")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f3m7"]
atlas = ExtResource("1_x7wmx")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw08y"]
atlas = ExtResource("1_x7wmx")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyo0j"]
atlas = ExtResource("1_x7wmx")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rclbe"]
atlas = ExtResource("1_x7wmx")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwmel"]
atlas = ExtResource("1_x7wmx")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqowk"]
atlas = ExtResource("1_x7wmx")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ws0o8"]
atlas = ExtResource("1_x7wmx")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_bvmel"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qexi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgk64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2g54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mhva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71us2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21snm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr7qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnofp")
}],
"loop": true,
"name": &"dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u4cg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_juiv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i66jf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkvg0")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oehnw")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hk67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d7dm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fnpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opmdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gygjm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8ptr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43u7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hckj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ck5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f3m7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw08y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyo0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rclbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwmel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqowk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ws0o8")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ea7ni"]
radius = 6.0
height = 18.0

[sub_resource type="Animation" id="Animation_s0jrr"]
resource_name = "GroundPoundLand"
length = 0.4
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -12), Vector2(0, -4), Vector2(8.95676e-07, -8.12267), Vector2(8.95676e-07, -8.12267), Vector2(0, -12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.92175, 0.347399), Vector2(1.13319, 0.667566), Vector2(1.13319, 0.667566), Vector2(1, 1)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GroundPoundSound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_r46ec")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FSM/GroundPound")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.05),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_end_ground_pound"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [null, null],
"method": &"createJumpParticles"
}]
}

[sub_resource type="Animation" id="Animation_8o0cs"]
resource_name = "GroundPoundingIn"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FSM/GroundPound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_ground_pound_move"
}]
}

[sub_resource type="Animation" id="Animation_rt513"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1bxad"]
_data = {
"GroundPoundLand": SubResource("Animation_s0jrr"),
"GroundPoundingIn": SubResource("Animation_8o0cs"),
"RESET": SubResource("Animation_rt513")
}

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
collision_mask = 7
script = ExtResource("1_bxcsj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_bvmel")
animation = &"idle"
autoplay = "idle"
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_ea7ni")

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ls1pa")
bus = &"SFX"

[node name="DashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wweeb")
bus = &"SFX"

[node name="WalkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_l58x2")
bus = &"SFX"

[node name="GroundPoundSound" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1bxad")
}

[node name="SlidingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_l0t5c")
bus = &"SFX"

[node name="DeadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wweeb")
bus = &"SFX"

[node name="HealthComponent" parent="." instance=ExtResource("8_3x26n")]

[node name="FSM" type="Node" parent="."]
script = ExtResource("9_t7dai")

[node name="Idle" type="Node" parent="FSM"]
script = ExtResource("10_bbbfr")

[node name="Run" type="Node" parent="FSM"]
script = ExtResource("11_omj3b")

[node name="Timer" type="Timer" parent="FSM/Run"]
wait_time = 0.2

[node name="Jump" type="Node" parent="FSM"]
script = ExtResource("12_ku28p")

[node name="Fall" type="Node" parent="FSM"]
script = ExtResource("13_k1mpx")

[node name="Dead" type="Node" parent="FSM"]
script = ExtResource("13_1tcp4")

[node name="DeadTimer" type="Timer" parent="FSM/Dead"]
one_shot = true

[node name="WallSlide" type="Node" parent="FSM"]
script = ExtResource("15_3uq2u")

[node name="GroundPound" type="Node" parent="FSM"]
script = ExtResource("16_j77d5")

[node name="Invincible_timer" type="Timer" parent="FSM/GroundPound"]
wait_time = 0.4
one_shot = true

[node name="FSM_Actions" type="Node" parent="."]
script = ExtResource("9_t7dai")

[node name="Idle" type="Node" parent="FSM_Actions"]
script = ExtResource("14_rotc5")

[node name="Dash" type="Node" parent="FSM_Actions"]
script = ExtResource("14_7675s")
ghost_node = ExtResource("2_epedm")

[node name="Dash_timer" type="Timer" parent="FSM_Actions/Dash"]
wait_time = 0.5
one_shot = true

[node name="Dash_timer_again" type="Timer" parent="FSM_Actions/Dash"]
wait_time = 1.2
one_shot = true

[node name="Ghost_timer" type="Timer" parent="FSM_Actions/Dash"]
wait_time = 0.05

[connection signal="timeout" from="FSM/Run/Timer" to="FSM/Run" method="_on_timer_timeout"]
[connection signal="timeout" from="FSM/Dead/DeadTimer" to="FSM/Dead" method="_on_dead_timer_timeout"]
[connection signal="timeout" from="FSM/GroundPound/Invincible_timer" to="FSM/GroundPound" method="_on_invincible_timer_timeout"]
[connection signal="timeout" from="FSM_Actions/Dash/Dash_timer" to="FSM_Actions/Dash" method="_on_dash_timer_timeout"]
[connection signal="timeout" from="FSM_Actions/Dash/Dash_timer_again" to="FSM_Actions/Dash" method="_on_dash_timer_again_timeout"]
[connection signal="timeout" from="FSM_Actions/Dash/Ghost_timer" to="FSM_Actions/Dash" method="_on_ghost_timer_timeout"]
